Update version in build

--- a/distribution/ijeomamotion-40/index.html
+++ b/distribution/ijeomamotion-40/index.html
@@ -42,7 +42,7 @@
 			<h2>ijeomamotion</h2>
 			<p>
 			A library by <a href="http://ekeneijeoma.com">Ekene Ijeoma</a> for the <a href="http://www.processing.org" target="_blank">Processing</a> programming environment.<br>
-			Last update, 10/01/2012.
+			Last update, 10/02/2012.
 			</p>
 			<p>
 			A library for sketching animations with numbers, colors vectors, beziers, curves and more! <br>
@@ -57,8 +57,8 @@
 			<div id="download" class="clear">
 			<h2>Download</h2>
 			<p>
-			Download ijeomamotion version 4 (26) in 
-			<a href="./download/ijeomamotion-26.zip">.zip format</a>.
+			Download ijeomamotion version 4 (40) in 
+			<a href="./download/ijeomamotion-40.zip">.zip format</a>.
 			</p>
 			<h2>Installation</h2>
 			<p>
@@ -90,7 +90,7 @@
 			<strong>Platform</strong> osx,windows
 			
 			<!-- which processing version did you use for testing your library? -->
-			<br /><strong>Processing</strong> 2.0a8
+			<br /><strong>Processing</strong> 2.0
 			
 			<!-- does your library depend on any other library or framework? -->
 			<br /><strong>Dependencies</strong> ?
